Delegating scrip loading to python